# Centauri-C2

./: .gitignore  ACTIVE_TRACKS_CLASSIFICATION_UPDATE.md  ARCHITECTURE.md  BANNER.txt  BLUEHALO_INTEGRATION_ANALYSIS.md  BLUEHALO_QUICK_SUMMARY.md  C2_STUDY.md  CLASSIFICATION_COLORS_REFERENCE.md  CLASSIFICATION_COLORS_UPDATE.md  CLASSIFICATION_FIXES.md  CLASSIFICATION_FIXES_2.md  CLASSIFICATION_IMPLEMENTATION.md  CLASSIFICATION_QUICK_REF.md  CLASSIFICATION_SPACING_UPDATE.md  CLEANUP_SUMMARY.md  DELIVERY_COMPLETE.md  DOCS_CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  DUAL_ANTENNA_SETUP.md  ECHOGUARD_INTEGRATION_ANALYSIS.md  ENHANCEMENTS_SUMMARY.md  FEATURE_COMPLETE_RADAR_CONFIG.md  FINAL_SUMMARY.txt  FOV_BOX_COLLAPSIBLE.md  FOV_FEATURE_COMPLETE.md  FOV_FIXES_COMPLETE.md  FOV_VISUALIZATION.md  GPS_INTEGRATION.md  GPS_INTEGRATION_COMPLETE.md  GPS_SETUP_CHECKLIST.md  HEADING_ACTION_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_CHECKLIST.md  INTEGRATION_REQUIREMENTS.md  INTERACTIVE_STATUS_INDICATORS.md  LEGEND_SPACING_FINAL.md  LIVE_RADAR_CONFIG.md  MAP_INTEGRATION_STATUS.md  (+72 more)
config/: radar_config.json  settings.json  zones.geojson
demo_missions/: demo_export.json  demo_tracks.csv
docs/: MISSION_RECORDING.md  THREAT_ASSESSMENT_ENHANCED.md
engine/: mock_engine.py  mock_engine_updated.py
orchestration/: bridge.py  gunner_interface.py
pdf_extracts/: BNET_11_1_5_Manual_extracted.txt  EchoGuard_Developer_Manual_SW18.1_extracted.txt  EchoGuard_INTL_User_Manual_English_extracted.txt  EchoGuard_Radar_Developer_Manual_SW16.4.0_extracted.txt  (+3 more)
(+314 files in other folders)
