[tool.poetry]
name = "triad-c2"
version = "0.1.0"
description = "TriAD Counter-UAS Command & Control System"
authors = ["Defense Systems Team"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.6.0"
pydantic = "^2.5.0"
pyqtgraph = "^0.13.3"
numpy = "^1.26.0"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
